# connme.ru-chat

./: .gitignore  CMakeLists.txt  README.md
.github/actions/spelling/: expect.txt
.github/workflows/: qa.yml  release-deployment.yml
src/: CMakeLists.txt
src/chat/: CMakeLists.txt  chat-server-jsonparser.cpp  chat-server-protocol-message.cpp  chat-server.cpp
src/chat/include/: chat-server-const.h.in  chat-server-protocol-message.h
supplemental/archive/: CMakeLists.txt  archive.config.pl.in
supplemental/cron/: CMakeLists.txt  health.in  health_srcdiff.conf.in
supplemental/docker/prod/: Dockerfile
supplemental/docker/qa/: Dockerfile
supplemental/git/: CMakeLists.txt
supplemental/init_d/: CMakeLists.txt  chatd.in
supplemental/selenium/: test.py
templates/: CMakeLists.txt
templates/ru/pages/prod/: addphoto.htmlt  anketa.htmlt  blog_add_message.htmlt  blog_archive.htmlt  book.htmlt  books.htmlt  bucket_add.htmlt  catalog.htmlt  chat.htmlt  companies_i_own_list.htmlt  create_group.htmlt  edit_company.htmlt  edit_group.htmlt  edit_profile.htmlt  editinfo.htmlt  find_friends.htmlt  forumpost.htmlt  good.htmlt  good_buyed.htmlt  good_deleted.htmlt  good_updated.htmlt  groups_i_own_list.htmlt  logout.htmlt  main.htmlt  my_network.htmlt  news_feed.htmlt  show_news.htmlt  show_spec.htmlt  user_navigation_menu.htmlt  view_company_profile.htmlt  view_group_profile.htmlt  view_profile.htmlt  weberror_activator_notfound.htmlt  weberror_captcha.htmlt  work.htmlt  work_list.htmlt  zakaz.htmlt
tests/auto/: CMakeLists.txt  autotest_utilities_db_basic.cpp
